# cmake-template

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md
src/: main.cpp
